Fix Tailwind CSS processing for production build

--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,16 @@
       "src": "/(.*)",
       "dest": "/index.html"
     }
+  ],
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "installCommand": "npm install",
+        "buildCommand": "npm run build",
+        "outputDirectory": "dist"
+      }
+    }
   ]
 } 
